--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -19,7 +18,7 @@
      <p class="tw-icon"><a href="#"><img src="img/tw-icon.png"></a></p>
    <div class="slogan">
       <p>Chatbot which helps millennials</p>
-      <p>Find unique attractions</p>
+      <p class="slogan-light">Find unique attractions</p>
     </div>
      <form>
        <button type="button" class="button1">Get Started</button>
@@ -29,7 +28,7 @@
   <main>
     <div class="second-slogan">
         <p>Powered by artificial intelligence</p>
-        <p>Designed by travelers</p>
+        <p class="slogan-light">Designed by travelers</p>
     </div>
 
 
@@ -71,8 +70,8 @@
     <div class="border-div">
       <div class="footer-text">
         <h1>Available for you anytime</h1>
-        <h2>Everywhere</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+        <h2 class="slogan-light2">Everywhere</h2>
+        <p class="slogan-light">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
             Duis tincidunt interdum sapien.<br><br>
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
             dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
@@ -131,18 +130,18 @@
 
         <div class="navigation">
             <h4>Navigation</h4>
-            <p>Careers</p>
-            <p>Our services</p>
-            <p>About us</p>
-            <p>Contact</p>   
+            <p><a href="#">Careers</a></p>
+            <p><a href="#">Our services</a></p>
+            <p><a href="#">About us</a></p>
+            <p><a href="#">Contact</a></p>   
         </div>
 
         <div class="social">
           <h4>Social</h4>
-          <p>Facebook</p>
-          <p>Twitter</p>
-          <p>LinkedIn</p>
-          <p>Angel List</p>
+          <p><a href="#">Facebook</a></p>
+          <p><a href="#">Twitter</a></p>
+          <p><a href="#">LinkedIn</a></p>
+          <p><a href="#">Angel List</a></p>
         </div>
 
          
